# TubuleMAP

./: .gitignore  LICENSE  README.md  pyproject.toml
tubulemap/: __init__.py  main.py
tubulemap/cellpose_tracker/: __init__.py  backtrack.py  core.py  core_post_processing.py  evaluation.py  geometry.py  initialization.py  io_utils.py  mesehwithlid.py  mesh_pipeline.py  mesh_to_mask.py  mesh_to_mask_pipeline.py  parameters.py  plane_rotations.py  post_processing.py  segmentation.py  tracking.py  vector_ops.py
tubulemap/multiprocessing_/: diagnose_mesh_to_mask_output.py  diagnose_point_axes_pipeline.py  diagnose_tracking_inputs.py  mp_tracker_gt_combinations_PCT.py  multiprocessing_ortho_ply_gen.py  multiprocessing_tracker.py  multiprocessing_tracker_gt.py  visualize_hdf5_images.py
tubulemap/utils/: __init__.py  misc_utils.py  zarr_resolution.py
tubulemap/widgets/: __init__.py  downsample_control_widget.py  human_in_loop_widget.py  open_zarr_widget.py  points_widget.py  tubule_tracker_widget.py
