[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tubulemap"
description = "A python package for tracking tubules"
license = { file = "LICENSE" }
requires-python = ">=3.11.0, <=3.11.11"
authors = [
    { name = "David Brenes", email = "brenes@stanford.edu" },
    { name = "Che Poudel", email = "cpoudel@uw.edu" },
    { name = "Wenhui Xie", email = "whxie@uw.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
keywords = [
    "tubule",
    "tracker",
    "3D",
]
dynamic = ["version"]

dependencies = [
    "aiobotocore==2.15.1",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.9",
    "aioitertools==0.12.0",
    "aiosignal==1.3.1",
    "alabaster==1.0.0",
    "annotated-types==0.7.0",
    "anyio==4.6.0",
    "app-model==0.3.0",
    "appdirs==1.4.4",
    "appnope==0.1.4",
    "asciitree==0.3.3",
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "babel==2.16.0",
    "blosc2==2.7.1",
    "botocore==1.35.23",
    "build==1.2.2",
    "cachey==0.2.1",
    "cellpose==3.0.11",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cloudpickle==3.0.0",
    "comm==0.2.2",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "dask==2024.9.1",
    "debugpy==1.8.6",
    "decorator==5.1.1",
    "distributed==2024.9.1",
    "docstring-parser==0.16",
    "docutils==0.21.2",
    "edt==2.4.1",
    "executing==2.1.0",
    "fastapi==0.115.0",
    "fasteners==0.19",
    "fastremap==1.15.0",
    "filelock==3.16.1",
    "flexcache==0.3",
    "flexparser==0.3.1",
    "fonttools==4.54.1",
    "freetype-py==2.5.1",
    "frozenlist==1.4.1",
    "fsspec==2024.9.0",
    "gevent==24.2.1",
    "greenlet==3.1.1",
    "gurobipy==11.0.3",
    "h11==0.14.0",
    "heapdict==1.0.1",
    "hsluv==5.0.4",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "idna==3.10",
    "imagecodecs==2024.9.22",
    "imageio==2.35.1",
    "imagesize==1.4.1",
    "importlib-metadata==8.5.0",
    "in-n-out==0.2.1",
    "ipykernel==6.29.5",
    "ipython==8.28.0",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.7",
    "lazy-loader==0.4",
    "llvmlite==0.43.0",
    "locket==1.0.0",
    "magicgui==0.9.1",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mip==1.16rc0",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "napari==0.5.4",
    "napari-console==0.1.0",
    "napari-plugin-engine==0.2.0",
    "napari-ome-zarr",
    "napari-svg==0.2.0",
    "natsort==8.4.0",
    "ndindex==1.9.2",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "npe2==0.7.7",
    "numba==0.60.0",
    "numcodecs==0.13.0",
    "numexpr==2.10.1",
    "numpy==1.26.4",
    "numpydoc==1.8.0",
    "ome-zarr==0.9.0",
    "opencv-python-headless==4.10.0.84",
    "packaging==24.1",
    "pandas==2.2.3",
    "parso==0.8.4",
    "partd==1.4.2",
    "pexpect==4.9.0",
    "pillow==10.4.0",
    "pint==0.24.3",
    "platformdirs==4.3.6",
    "pooch==1.8.2",
    "prompt-toolkit==3.0.48",
    "psutil==6.0.0",
    "psycopg2-binary==2.9.9",
    "psygnal==0.11.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyconify==0.1.6",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic-compat==0.1.2",
    "pydantic-core==2.23.4",
    "pydot==3.0.2",
    "pygments==2.18.0",
    "pyopengl==3.1.7",
    "pyparsing==3.1.4",
    "pyproject-hooks==1.2.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.15.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "qtawesome==1.3.1",
    "qtconsole==5.6.0",
    "qtpy==2.4.1",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rich==13.9.2",
    "roifile==2024.9.15",
    "rpds-py==0.20.0",
    "s3fs==2024.9.0",
    "scikit-image==0.24.0",
    "scikit-learn==1.6.0",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "shellingham==1.5.4",
    "simpleitk==2.4.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "sortedcontainers==2.4.0",
    "sphinx==8.0.2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sqlalchemy==2.0.35",
    "stack-data==0.6.3",
    "starlette==0.38.6",
    "superqt==0.6.7",
    "sympy==1.13.3",
    "tabulate==0.9.0",
    "tblib==3.0.0",
    "threadpoolctl==3.5.0",
    "tifffile==2024.9.20",
    "toml==0.10.2",
    "tomli-w==1.0.0",
    "toolz==1.0.0",
    "torch==2.4.1",
    "tornado==6.4.1",
    "tqdm==4.66.5",
    "traitlets==5.14.3",
    "typer==0.12.5",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "ultrack==0.6.0",
    "urllib3==2.2.3",
    "uvicorn==0.31.0",
    "vispy==0.14.3",
    "wcwidth==0.2.13",
    "websocket==0.2.1",
    "websockets==13.1",
    "wrapt==1.16.0",
    "yarl==1.13.1",
    "zarr==2.18.3",
    "zict==3.0.0",
    "zipp==3.20.2",
    "zope-event==5.0",
    "zope-interface==7.0.3"
]

[project.optional-dependencies] 

dev = [
    "pytest>=8.2.1",
    "black",
    "coverage",
    "flake8",
    "interrogate",
    "isort",
    "Sphinx",
    "furo",
]

[project.urls]
"Homepage" = "https://github.com/Davidrbr95/TubuleTracker/"
"Issues" = "https://github.com/Davidrbr95/TubuleTracker/"

[tool.setuptools]
packages = { find = { include = ["tubulemap*"] } }

[tool.setuptools.dynamic]
version = { attr = "tubulemap.__version__" }

[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
(
    /(
        \.eggs         # exclude a few common directories in the
      | \.git          # root of the project
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | build
      | dist
    )/
    | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["tubulemap", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover",
]
fail_under = 100

[tool.isort]
line_length = 120
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail_under = 100
